// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with no expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     expense
     totalling 
    $1.95
    .
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with three expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expense
    s
     totalling 
    $1,141.95
    .
  </p>
</div>
`;
